--- a/CSS/style.css
+++ b/CSS/style.css
@@ -25,6 +25,7 @@ nav > a{
   font-weight: bold;
   text-align: center;
 }
+
  nav p {
   padding: 20px;
  }
@@ -83,7 +84,9 @@ table{
   font-size: 20px;
   font-weight: bold;
   text-align: center;
-
+}
+.RockPaperScissors{
+  width: 180px;
 }
 
 th{
